# AI-Research-Assistant

./: .env.example  .gitignore  Changelog.md  Dockerfile  bert_paper_summary.md  docker-compose.yml  lambda-logs.txt  lambda-policy.json  pyproject.toml  tmp_diag.py
infrastructure/api_gateway/: setup.md
infrastructure/iam/: lambda_role.json
scripts/: deploy_lambda.sh
src/: __init__.py  main.py  models.py
src/api/: dependencies.py  schemas.py
src/api/routes/: chat.py  documents.py  health.py  ingest.py  query.py
src/aws/: __init__.py  dynamodb_client.py  s3_client.py  sqs_client.py
src/config/: settings.py
src/embeddings/: __init__.py  base.py  batch_embedder.py  ollama_embedder.py
src/lambda/: __init__.py  requirements.txt  worker.py
src/pipeline/: __init__.py  orchestrator.py
src/pipeline/chunkers/: __init__.py  recursive_chunker.py
src/pipeline/cleaners/: __init__.py  text_cleaner.py
src/pipeline/extractors/: __init__.py  base.py  html_extractor.py  markdown_extractor.py  pdf_extractor.py  text_extractor.py
src/pipeline/generation/: __init__.py  generator.py
src/pipeline/metadata/: __init__.py  metadata_extractor.py
src/vectorstore/: __init__.py  faiss_store.py  id_mapper.py
